--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Copyright (c) VMware, Inc. 2022. All rights reserved.
+# SPDX-License-Identifier: Apache-2.0
+
 ### Java template
 # Compiled class file
 *.class
@@ -100,5 +103,9 @@ fabric.properties
 
 generated-pipeline.yml
 
-build/*
+**/build/*
+#build/*
 .gradle/*
+
+
+**/*test-read-only/*
