--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,9 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+.idea/*
+
+generated-pipeline.yml
+
+build/*
+.gradle/*
