--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,46 @@
-plugins {
-    id 'java-library'
-    id 'base'
-    id 'eclipse'
-    id 'maven-publish'
-}
+// Copyright (c) VMware, Inc. 2022. All rights reserved.
+// SPDX-License-Identifier: Apache-2.0
 
-group 'com.vmware.gemfire'
-version "${version}"
-
-repositories {
+buildscript {
+  repositories {
     mavenCentral()
+  }
+  dependencies {
+    classpath 'com.google.api-client:google-api-client:1.28.0'
+  }
 }
 
-// The published bom will constrain versions within geode of any subproject with this property set.
-project.ext.set('constrainVersionInBom', true)
+plugins {
+  id 'java-library'
+}
 
-publishing {
-    publications {
-        mavenRepo(MavenPublication) {
-            from components.java
-        }
+allprojects {
+
+  compileJava {
+    sourceCompatibility = '1.8'
+    targetCompatibility = '1.8'
+  }
+
+  repositories {
+    mavenCentral()
+    maven {
+      url = uri('gcs://gemfire-build-resources/maven/gemfire')
     }
-}
 
-dependencies {
-    implementation 'org.springframework.data:spring-data-geode:2.6.3'
-}
+    maven {
+      url = uri('https://maven.apachegeode-ci.info/snapshots')
+    }
 
-test {
-    useJUnitPlatform()
+    maven {
+      credentials {
+        username "$gemfireRepoUsername"
+        password "$gemfireRepoPassword"
+      }
+      url = uri("https://commercial-repo.pivotal.io/data3/gemfire-release-repo/gemfire")
+    }
+
+    maven {
+      url = uri('https://repo.maven.apache.org/maven2/')
+    }
+  }
 }
