--- a/gradle.properties
+++ b/gradle.properties
@@ -1,54 +1,16 @@
-# Version information for use by Maven artifacts
 #
-# The versionNumber follows semantic versioning conventions.
-#   X.Y.Z     - major.minor.patch
-# The releaseQualifier uses the following conventions:
-#   .M?       - milestone release
-#   -beta.?   - beta release
-#   -build.?    - development version
-#   <blank>   - release
+# Copyright (c) VMware, Inc. 2022. All rights reserved.
+# SPDX-License-Identifier: Apache-2.0
 #
-# The full version string consists of 'versionNumber + releaseQualifier + releaseType'
-version = 9.10-build.0
 
-# Maven also uses the project group as a prefix.
 group = com.vmware.gemfire
+version = 2.7.0-build.9999
+gemfireBaseVersion = 9.15
+springDataBaseVersion = SD27
 
-# 'apply from:' location for gradle scripts, relative to the project root.  Specified here so that
-# it may be overridden by external projects or custom develop environment configurations
-scriptDir = gradle
+description = 'Spring Data for VMware GemFire'
 
-# Set the buildId to add build metadata that can be viewed from
-# gfsh or pulse (`gfsh version --full`). Can be set using
-# `gradle -PbuildId=N ...` where N is an arbitrary string.buildId = 0
-buildId = 0
+minimumGradleVersion = 7.4
 
-productName = Spring Data For Tanzu Geode
-productOrg = VMware
+gemfireVersion=9.15.2
 
-minimumGradleVersion = 7.4.1
-# Set this on the command line with -P or in ~/.gradle/gradle.properties
-# to change the buildDir location.  Use an absolute path.
-buildRoot=
-
-#JAVA_HOME to be used for compilation
-compileJVM=
-compileJVMVer=8
-
-#JAVA_HOME to be used by tests
-testJVM=
-testJVMVer=8
-
-repeat = 100
-
-org.gradle.caching = true
-org.gradle.configureondemand = false
-org.gradle.daemon = true
-org.gradle.jvmargs = -Xmx3g
-org.gradle.parallel = true
-#org.gradle.workers.max = 3
-
-org.gradle.internal.http.socketTimeout=120000
-org.gradle.internal.http.connectionTimeout=120000
-
-junit.jupiter.testclass.order.default = org.junit.jupiter.api.ClassOrderer$Random
