--- a/ci/pipelines/shared/jinja.variables.yml
+++ b/ci/pipelines/shared/jinja.variables.yml
@@ -18,3 +18,6 @@ repositories:
 storage:
   artifactBucket: gemfire-test-artifacts
   bucket: gemfire-build-resources
+java_build_version:
+  name: openjdk8
+  version: 17
