change branch for spring-data-gemfire.

--- a/ci/pipelines/shared/jinja.variables.yml
+++ b/ci/pipelines/shared/jinja.variables.yml
@@ -1,6 +1,6 @@
 repositories:
   springDataGemfire:
-    branch: main
+    branch: develop
     fork: gemfire
     repo: spring-data-gemfire
   gemfireAssembly:
