--- a/ci/pipelines/main/meta.properties
+++ b/ci/pipelines/main/meta.properties
@@ -2,3 +2,4 @@ CONCOURSE_HOST=concourse.gemfire-ci.info
 GCP_PROJECT=gemfire-dev
 CONCOURSE_TEAM=main
 SEMVER_PRERELEASE_TOKEN=build
+ARTIFACT_BUCKET=files-gemfire-dev
