--- a/ci/pipelines/main/jinja.template.yml
+++ b/ci/pipelines/main/jinja.template.yml
@@ -245,6 +245,17 @@ jobs:
 
 - name: build-spring-data-gemfire
   max_in_flight: 1
+  ensure:
+    task: delete_instance
+    image: utilities-alpine-tools-docker-image
+    config:
+      platform: linux
+      run:
+        path: spring-data-gemfire-ci/ci/scripts/delete_instance.sh
+      inputs:
+      - name: spring-data-gemfire-ci
+      - name: instance-data
+    timeout: 1h
   plan:
   - in_parallel:
     - get: spring-data-gemfire-ci
@@ -318,7 +329,7 @@ jobs:
       config:
         platform: linux
         run:
-          path: =-ci/ci/scripts/rsync_code_up.sh
+          path: spring-data-gemfire-ci/ci/scripts/rsync_code_up.sh
         inputs:
         - name: spring-data-gemfire-ci
         - name: spring-data-gemfire
@@ -327,7 +338,7 @@ jobs:
     attempts: 5
     on_failure:
       task: delete_instance
-      image: alpine-tools-image
+      image: utilities-alpine-tools-docker-image
       config:
         platform: linux
         run:
@@ -337,7 +348,7 @@ jobs:
         - name: instance-data
       timeout: 1h
   - task: build
-    image: alpine-tools-image
+    image: utilities-alpine-tools-docker-image
     config:
       platform: linux
       params:
@@ -359,7 +370,7 @@ jobs:
     ensure:
       do:
       - task: rsync_code_down
-        image: alpine-tools-image
+        image: utilities-alpine-tools-docker-image
         config:
           platform: linux
           params:
@@ -378,7 +389,7 @@ jobs:
         do:
         - in_parallel:
           - task: archive_results
-            image: alpine-tools-image
+            image: utilities-alpine-tools-docker-image
             config:
               platform: linux
               params:
@@ -398,7 +409,7 @@ jobs:
               - name: spring-data-gemfire-results
             timeout: 1h
           - task: delete_instance
-            image: alpine-tools-image
+            image: utilities-alpine-tools-docker-image
             config:
               platform: linux
               run:
