--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@
 version = 9.10-build.0
 
 # Maven also uses the project group as a prefix.
-group = com.vmware.gemfire
+group = com.vmware.tanzu.gemfire
 
 # 'apply from:' location for gradle scripts, relative to the project root.  Specified here so that
 # it may be overridden by external projects or custom develop environment configurations
@@ -52,3 +52,6 @@ org.gradle.internal.http.socketTimeout=120000
 org.gradle.internal.http.connectionTimeout=120000
 
 junit.jupiter.testclass.order.default = org.junit.jupiter.api.ClassOrderer$Random
+
+springDataVersion = 2.8.0
+gemfireVersion = 9.10.5
