--- a/ci/pipelines/main/meta.properties
+++ b/ci/pipelines/main/meta.properties
@@ -1,5 +1,5 @@
 CONCOURSE_HOST=concourse.gemfire-ci.info
 GCP_PROJECT=gemfire-dev
-CONCOURSE_TEAM=main
+CONCOURSE_TEAM=developer
 SEMVER_PRERELEASE_TOKEN=build
 ARTIFACT_BUCKET=files-gemfire-dev
