--- a/gradle.properties
+++ b/gradle.properties
@@ -54,4 +54,5 @@ org.gradle.internal.http.connectionTimeout=120000
 junit.jupiter.testclass.order.default = org.junit.jupiter.api.ClassOrderer$Random
 
 springDataVersion = 2.5.10
+springDataBranch = 2.5.x
 gemfireVersion = 9.10.5
