--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
   id 'maven-publish'
 }
 
-group 'com.vmware.gemfire'
+group 'com.vmware.tanzu.gemfire'
 version "${version}"
 
 repositories {
