Updating GemFire library version to 9.15.3

--- a/build-tools/publishing/src/main/groovy/gemfire-repo-artifact-publishing.gradle
+++ b/build-tools/publishing/src/main/groovy/gemfire-repo-artifact-publishing.gradle
@@ -18,7 +18,7 @@ publishing {
       afterEvaluate {
         from(components.java)
         groupId 'com.vmware.gemfire'
-        artifactId project.ext.get("pomProjectArtifactName")+"-${gemfireBaseVersion}"
+        artifactId project.ext.get("pomProjectArtifactName")
         pom {
           name = project.ext.has("pomProjectLongName") ? project.ext.get("pomProjectLongName") : ""
           description = project.ext.has("pomProjectDescription") ? project.ext.get("pomProjectDescription") : ""
