--- a/gradle.properties
+++ b/gradle.properties
@@ -4,13 +4,18 @@
 #
 
 group = com.vmware.gemfire
-version = 2.6.0-build.9999
+version = 1.0.0-build.9999
 gemfireBaseVersion = 9.15
-springDataBaseVersion = SD26
+
+additionalMavenRepoURLs=''
 
 description = 'Spring Data for VMware GemFire'
 
 minimumGradleVersion = 7.4
 
-gemfireVersion=9.15.2
+gemfireVersion=9.15.3
+
+org.gradle.parallel=true
+org.gradle.workers.max=3
+
 
