--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,21 @@
-#
+
 # Copyright (c) VMware, Inc. 2022. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 
 group = com.vmware.gemfire
-version = 2.7.0-build.9999
+version = 1.0.0-build.9999
 gemfireBaseVersion = 9.15
-springDataBaseVersion = SD27
+
+additionalMavenRepoURLs=''
 
 description = 'Spring Data for VMware GemFire'
 
 minimumGradleVersion = 7.4
 
-gemfireVersion=9.15.2
+gemfireVersion=9.15.3
+
+org.gradle.parallel=true
+org.gradle.workers.max=3
+
 
