--- a/spring-data-vmware-gemfire/build.gradle
+++ b/spring-data-vmware-gemfire/build.gradle
@@ -27,14 +27,14 @@ dependencies {
   api "com.vmware.gemfire:geode-deployment-legacy:$gemfireVersion"
 
   implementation 'javax.cache:cache-api:1.1.1'
-  implementation 'org.springframework:spring-context-support:5.3.24'
-  implementation 'org.springframework:spring-tx:5.3.24'
-  implementation 'org.springframework:spring-web:5.3.24'
-  implementation "org.springframework.data:spring-data-commons:$springDataGeodeVersion"
-  implementation 'org.apache.shiro:shiro-spring:1.10.0'
-  implementation 'org.aspectj:aspectjweaver:1.9.7'
-  implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.4'
-  implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4'
+  api 'org.springframework:spring-context-support:5.3.24'
+  api 'org.springframework:spring-tx:5.3.24'
+  api 'org.springframework:spring-web:5.3.24'
+  api "org.springframework.data:spring-data-commons:$springDataGeodeVersion"
+  api 'org.apache.shiro:shiro-spring:1.10.0'
+  api 'org.aspectj:aspectjweaver:1.9.7'
+  api 'com.fasterxml.jackson.core:jackson-annotations:2.13.4'
+  api 'com.fasterxml.jackson.core:jackson-databind:2.13.4'
   runtimeOnly 'antlr:antlr:2.7.7'
   compileOnly('javax.enterprise:cdi-api:1.0') {
     exclude group: 'javax.annotation', module: 'jsr250-api'
