--- a/build-tools/publishing/src/main/groovy/gemfire-repo-artifact-publishing.gradle
+++ b/build-tools/publishing/src/main/groovy/gemfire-repo-artifact-publishing.gradle
@@ -1,3 +1,5 @@
+import com.sun.org.apache.xerces.internal.dom.ParentNode
+
 // Copyright (c) VMware, Inc. 2022. All rights reserved.
 // SPDX-License-Identifier: Apache-2.0
 plugins {
@@ -27,7 +29,7 @@ publishing {
           withXml {
             def providerAsElement = asElement()
             providerAsElement.insertBefore(
-                    providerAsElement.ownerDocument().createComment(license),
+                    providerAsElement.getOwnerDocument().createComment(license),
                     providerAsElement.firstChild)
           }
           scm {
