--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@
 
 group = com.vmware.gemfire
 version = 1.1.0-build.9999
-gemfireBaseVersion = 9.15
+gemfireBaseVersion = 10.0
 
 additionalMavenRepoURLs=''
 
@@ -14,7 +14,7 @@ description = 'Spring Data for VMware GemFire'
 
 minimumGradleVersion = 7.4
 
-gemfireVersion=9.15.3
+gemfireVersion=10.0.0-build.0
 
 org.gradle.parallel=true
 org.gradle.workers.max=3
