--- a/spring-data-vmware-gemfire/build.gradle
+++ b/spring-data-vmware-gemfire/build.gradle
@@ -3,10 +3,13 @@
 
 plugins {
   id 'java-library'
-  id "io.freefair.lombok" version "6.5.0.2"
+  id "io.freefair.lombok" version "6.5.1"
   id 'gemfire-repo-artifact-publishing'
   id 'spring-java-jar'
 }
+
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
 
 project.ext.set("pomProjectLongName","Spring Data VMware GemFire")
 project.ext.set("pomProjectArtifactName","spring-data-2.6-gemfire-${gemfireBaseVersion}")
@@ -28,12 +31,12 @@ dependencies {
   api "com.vmware.gemfire:gemfire-version:$gemfireVersion"
 
   implementation 'javax.cache:cache-api:1.1.1'
-  api 'org.springframework:spring-context-support:5.3.24'
-  api 'org.springframework:spring-tx:5.3.24'
-  api 'org.springframework:spring-web:5.3.24'
-  api "org.springframework.data:spring-data-commons:$springDataGeodeVersion"
-  api 'org.apache.shiro:shiro-spring:1.10.0'
-  api 'org.aspectj:aspectjweaver:1.9.7'
+  api 'org.springframework:spring-context-support:5.3.25'
+  api 'org.springframework:spring-tx:5.3.25'
+  api 'org.springframework:spring-web:5.3.25'
+  api "org.springframework.data:spring-data-commons:$springDataVersion"
+  api 'org.apache.shiro:shiro-spring:1.10.1'
+  api 'org.aspectj:aspectjweaver:1.9.19'
   api 'com.fasterxml.jackson.core:jackson-annotations:2.13.4'
   api 'com.fasterxml.jackson.core:jackson-databind:2.13.4'
   runtimeOnly 'antlr:antlr:2.7.7'
@@ -41,9 +44,9 @@ dependencies {
     exclude group: 'javax.annotation', module: 'jsr250-api'
   }
   testImplementation 'org.apache.geronimo.specs:geronimo-jcdi_2.0_spec:1.0.1'
-  testImplementation 'javax.interceptor:javax.interceptor-api:1.2.1'
+  testImplementation 'javax.interceptor:javax.interceptor-api:1.2.2'
   testImplementation 'javax.el:el-api:2.2'
-  testImplementation 'ch.qos.logback:logback-classic:1.2.5'
+  testImplementation 'ch.qos.logback:logback-classic:1.2.11'
   testImplementation 'org.apache.logging.log4j:log4j-to-slf4j:2.17.2'
   testImplementation 'javax.annotation:javax.annotation-api:1.3.2'
   testImplementation 'org.apache.derby:derbyLocale_zh_TW:10.9.1.0'
