--- a/spring-data-vmware-gemfire/gradle.properties
+++ b/spring-data-vmware-gemfire/gradle.properties
@@ -1,7 +1,7 @@
 #
-# Copyright (c) VMware, Inc. 2022. All rights reserved.
+# Copyright (c) VMware, Inc. 2022-2023. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 
-springDataGeodeBranch=tags/2.7.5
-springDataGeodeVersion=2.7.5
+springDataGeodeBranch=tags/2.7.7
+springDataGeodeVersion=2.7.7
